; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_dosinst.c_print_cmd_line_help.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_dosinst.c_print_cmd_line_help.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [55 x i8] c"Vim installer non-interactive command line arguments:\0A\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@.str.2 = private unnamed_addr constant [63 x i8] c"-create-batfiles  [vim gvim evim view gview vimdiff gvimdiff]\0A\00", align 1
@.str.3 = private unnamed_addr constant [66 x i8] c"    Create .bat files for Vim variants in the Windows directory.\0A\00", align 1
@.str.4 = private unnamed_addr constant [15 x i8] c"-create-vimrc\0A\00", align 1
@.str.5 = private unnamed_addr constant [65 x i8] c"    Create a default _vimrc file if one does not already exist.\0A\00", align 1
@.str.6 = private unnamed_addr constant [16 x i8] c"-install-popup\0A\00", align 1
@.str.7 = private unnamed_addr constant [50 x i8] c"    Install the Edit-with-Vim context menu entry\0A\00", align 1
@.str.8 = private unnamed_addr constant [19 x i8] c"-install-openwith\0A\00", align 1
@.str.9 = private unnamed_addr constant [53 x i8] c"    Add Vim to the \22Open With...\22 context menu list\0A\00", align 1
@.str.10 = private unnamed_addr constant [32 x i8] c"-create-directories [vim|home]\0A\00", align 1
@.str.11 = private unnamed_addr constant [66 x i8] c"    Create runtime directories to drop plugins into; in the $VIM\0A\00", align 1
@.str.12 = private unnamed_addr constant [24 x i8] c"    or $HOME directory\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @print_cmd_line_help to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_cmd_line_help() #0 {
  %1 = call i32 @printf(i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str, i64 0, i64 0))
  %2 = call i32 @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %3 = call i32 @printf(i8* getelementptr inbounds ([63 x i8], [63 x i8]* @.str.2, i64 0, i64 0))
  %4 = call i32 @printf(i8* getelementptr inbounds ([66 x i8], [66 x i8]* @.str.3, i64 0, i64 0))
  %5 = call i32 @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.4, i64 0, i64 0))
  %6 = call i32 @printf(i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str.5, i64 0, i64 0))
  %7 = call i32 @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.6, i64 0, i64 0))
  %8 = call i32 @printf(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.7, i64 0, i64 0))
  %9 = call i32 @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.8, i64 0, i64 0))
  %10 = call i32 @printf(i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str.9, i64 0, i64 0))
  %11 = call i32 @printf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.10, i64 0, i64 0))
  %12 = call i32 @printf(i8* getelementptr inbounds ([66 x i8], [66 x i8]* @.str.11, i64 0, i64 0))
  %13 = call i32 @printf(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.12, i64 0, i64 0))
  %14 = call i32 @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
